--- a/Views/Shared/_aside.cshtml
+++ b/Views/Shared/_aside.cshtml
@@ -54,8 +54,8 @@
             @if (accesos.pi)
             {
                 <li class="" data-filter-tags="Inicio Portal Propiedad Intelectual">
-                    <a href="~/PI/Index" title="Inicio" data-filter-tags="Inicio Portal Propiedad Intelectual">
-                    @*<a href="~/Admin" title="Inicio" data-filter-tags="Inicio Portal Propiedad Intelectual">*@
+                    @*<a href="~/PI/Index" title="Inicio" data-filter-tags="Inicio Portal Propiedad Intelectual">*@
+                    <a href="~/Admin" title="Inicio" data-filter-tags="Inicio Portal Propiedad Intelectual">
                         <i class='fa fa-home'></i>
                         <span class="nav-link-text" data-i18n="Inicio Portal Propiedad Intelectual">Inicio</span>
                     </a>
