--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -284,7 +284,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
             <div class="row">
                 <div class="col-md-3">
                     <div class="ctm-graph-box" box="05">
-                        <div class="ctm-graph-box-header filtrado" filtrado="06">
+                        <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
                                 <a href="/PI/RegistroMarcas?tipo=1" title="Link title" style="color:#FFFFFF">
                                     <h4>Solicitudes Marcas</h4>
@@ -296,7 +296,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                 </div>
                 <div class="col-md-3">
                     <div class="ctm-graph-box" box="06">
-                        <div class="ctm-graph-box-header filtrado" filtrado="07">
+                        <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
                                 <a href="/PI/RegistroMarcas?tipo=2" title="Link title" style="color:#FFFFFF">
                                     <h4>Solicitudes Avisos Comerciales</h4>
@@ -308,7 +308,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                 </div>
                 <div class="col-md-3">
                     <div class="ctm-graph-box" box="06">
-                        <div class="ctm-graph-box-header filtrado" filtrado="07">
+                        <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
                                 <a href="/PI/RegistroMarcas?tipo=3" title="Link title" style="color:#FFFFFF">
                                     <h4>Solicitudes Patentes</h4>
@@ -320,7 +320,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                 </div>
                 <div class="col-md-3">
                     <div class="ctm-graph-box" box="06">
-                        <div class="ctm-graph-box-header filtrado" filtrado="07">
+                        <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
                                 <a href="/PI/RegistroMarcas?tipo=4" title="Link title" style="color:#FFFFFF">
                                     <h4>Solicitudes Diseños Industriales</h4>
@@ -332,7 +332,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                 </div>
                 <div class="col-md-3">
                     <div class="ctm-graph-box" box="06">
-                        <div class="ctm-graph-box-header filtrado" filtrado="07">
+                        <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
                                 <a href="/PI/RegistroMarcas?tipo=5" title="Link title" style="color:#FFFFFF">
                                     <h4>Solicitudes Modelos Utilidades</h4>
@@ -344,7 +344,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                 </div>
                 <div class="col-md-3">
                     <div class="ctm-graph-box" box="06">
-                        <div class="ctm-graph-box-header filtrado" filtrado="07">
+                        <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
                                 <a href="/PI/RegistroMarcas?tipo=6" title="Link title" style="color:#FFFFFF">
                                     <h4>Solicitudes Modelos Industriales</h4>
@@ -356,7 +356,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                 </div>
                 <div class="col-md-3">
                     <div class="ctm-graph-box" box="06">
-                        <div class="ctm-graph-box-header filtrado" filtrado="07">
+                        <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
                                 <a href="/PI/RegistroMarcas?tipo=7" title="Link title" style="color:#FFFFFF">
                                     <h4>Solicitudes Obras Artisticas</h4>
@@ -368,7 +368,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                 </div>
                 <div class="col-md-3">
                     <div class="ctm-graph-box" box="06">
-                        <div class="ctm-graph-box-header filtrado" filtrado="07">
+                        <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
                                 <a href="/PI/RegistroMarcas?tipo=8" title="Link title" style="color:#FFFFFF">
                                     <h4>Solicitudes Obras Visuales</h4>
@@ -380,7 +380,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                 </div>
                 <div class="col-md-3">
                     <div class="ctm-graph-box" box="06">
-                        <div class="ctm-graph-box-header filtrado" filtrado="07">
+                        <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
                                 <a href="/PI/RegistroMarcas?tipo=9" title="Link title" style="color:#FFFFFF">
                                     <h4>Solicitudes Obras Literarias</h4>
@@ -392,7 +392,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                 </div>
                 <div class="col-md-3">
                     <div class="ctm-graph-box" box="06">
-                        <div class="ctm-graph-box-header filtrado" filtrado="07">
+                        <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
                                 <a href="/PI/RegistroMarcas?tipo=10" title="Link title" style="color:#FFFFFF">
                                     <h4>Solicitudes Obras Auditivas</h4>
@@ -404,7 +404,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                 </div>
                 <div class="col-md-3">
                     <div class="ctm-graph-box" box="06">
-                        <div class="ctm-graph-box-header filtrado" filtrado="07">
+                        <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
                                 <a href="/PI/RegistroMarcas?tipo=11" title="Link title" style="color:#FFFFFF">
                                     <h4>Solicitudes Obras Graficas</h4>
@@ -416,7 +416,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                 </div>
                 <div class="col-md-3">
                     <div class="ctm-graph-box" box="06">
-                        <div class="ctm-graph-box-header filtrado" filtrado="07">
+                        <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
                                 <a href="/PI/RegistroMarcas?tipo=12" title="Link title" style="color:#FFFFFF">
                                     <h4>Solicitudes Obras Tecnologicas</h4>
