--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -92,7 +92,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
         <div class="col-md-12">
             <h5 class="ctm-graph-box-title">En esta sección podrás visualizar las solicitudes en general del portal</h5>
             <div class="row">
-                @if (ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1")
+                @*@if (ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1")
                 {
                     <div class="col-md-6">
                         <div class="ctm-graph-box" box="022">
@@ -130,7 +130,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                     </div>
                 }
                 else
-                {
+                {*@
                     <div class="col-md-3">
                         <div class="ctm-graph-box" box="00">
                             <div class="ctm-graph-box-header">
@@ -227,7 +227,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                                 </div>*@
                         </div>
                     </div>
-                }
+                @*}*@
             </div>
 
             <h5 class="ctm-graph-box-title">En esta sección podrás visualizar solicitudes en tiempo y vencidas</h5>
