--- a/Views/PI/Index.cshtml
+++ b/Views/PI/Index.cshtml
@@ -75,7 +75,8 @@
 }
 <div class="subheader">
     <h1 class="subheader-title">
-        Dashboard PI
+        @*Dashboard PI*@
+        Propiedad Intelectual e Industrial
         <small>
         </small>
     </h1>
