--- a/Views/Shared/_aside.cshtml
+++ b/Views/Shared/_aside.cshtml
@@ -418,6 +418,14 @@
                                     </a>
                                 </li>
                             }
+                            @if (accesos.pi_BusquedaAvanzada)
+                            {
+                                <li class="">
+                                    <a href="~/PI/BusquedaAvanzada" title="Busqueda" data-filter-tags="Busqueda">
+                                        <span class="nav-link-text" data-i18n="Busqueda">Busqueda Avanzada</span>
+                                    </a>
+                                </li>
+                            }
                         </ul>
                     </li>
                 }
