--- a/Views/PI/BusquedaAvanzada.cshtml
+++ b/Views/PI/BusquedaAvanzada.cshtml
@@ -76,8 +76,8 @@
 }
 <div class="subheader">
     <h1 class="subheader-title">
-        Busqueda Avanzada
-        @*<div id="tituloregistro">Propiedad Industrial e Intelectual</div>*@
+        @*Busqueda Avanzada*@
+        <div id="titulobusquedavanzada">Busqueda Avanzada de Solicitudes (0 registros)</div>
         <small>
         </small>
     </h1>
